crates/aven-check/tests/fixtures/check/invalid/overlapping-spread-merge.av
merge = (a, b) => { ..a, ..b }
over = merge({ k: 1 }, { k: 2 })
